--- a/index.html
+++ b/index.html
@@ -13,99 +13,101 @@
   --secondary:#4f8cff;
   --text:#e6ebff;
   --muted:#9aa3c7;
-  --danger:#ff4d6d;
-  --pixel-block:url('https://raw.githubusercontent.com/GTAssets/tiles/main/block.png');
-  --pixel-gem:url('https://raw.githubusercontent.com/GTAssets/icons/main/gem.png');
 }
+body{margin:0;font-family:'Orbitron',sans-serif;background:var(--bg);color:var(--text);overflow-x:hidden;}
+a{text-decoration:none;}
+h1,h2,h3,h4,h5,h6{margin:0;}
 
-body{margin:0;font-family:'Orbitron',sans-serif;background:var(--bg);color:var(--text);}
-
-/* ================= LOADING BAR ================= */
+/* LOADING SCREEN */
 #loadingScreen{position:fixed;inset:0;background:linear-gradient(135deg,#0f0c29,#302b63,#24243e);display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:9999;color:#00ffd5;font-family:'Orbitron',sans-serif;}
-.loader-bar{width:250px;height:14px;border-radius:10px;background:rgba(0,255,213,0.15);overflow:hidden;margin-bottom:16px;box-shadow:0 0 12px rgba(0,255,213,.4) inset;}
+#loadingScreen h1{font-size:26px;margin-bottom:20px;text-align:center;text-shadow:0 0 12px #00ffd5,0 0 24px #00ffd5;animation:neonGlow 1.8s ease-in-out infinite alternate;}
+@keyframes neonGlow{0%{text-shadow:0 0 6px #00ffd5,0 0 12px #00ffd5,0 0 18px #00ffd5;}50%{text-shadow:0 0 12px #00ffd5,0 0 24px #00ffd5,0 0 36px #00ffd5;}100%{text-shadow:0 0 6px #00ffd5,0 0 12px #00ffd5,0 0 18px #00ffd5;}}
+.loader-bar{width:280px;height:16px;border-radius:10px;background:rgba(0,255,213,0.15);overflow:hidden;margin-bottom:16px;box-shadow:0 0 12px rgba(0,255,213,.4) inset;}
 .loader-bar .progress{height:100%;width:0%;background:#00ffd5;border-radius:10px;box-shadow:0 0 12px #00ffd5;transition:width 0.4s ease;}
 #loadingScreen p{font-size:14px;color:#00ffd5;letter-spacing:1px;}
 
-/* ================= NAVBAR ================= */
+/* NAVBAR */
 nav{width:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(6px);padding:12px 24px;position:sticky;top:0;z-index:100;display:flex;justify-content:space-between;align-items:center;box-shadow:0 4px 16px rgba(0,0,0,.5);}
 .nav-inner{display:flex;align-items:center;gap:20px;}
-.brand{font-weight:700;font-size:20px;display:flex;align-items:center;}
-.brand .navbar-badge{margin-left:12px;font-size:12px;padding:2px 10px;border-radius:999px;font-weight:700;letter-spacing:.5px;transition:all .3s ease;}
-.nav a{color:var(--text);text-decoration:none;font-weight:500;transition:.3s;}
-.nav a:hover{color:var(--primary);}
-
-/* BADGE ANIMASI */
-.badge-online{color:#00ffb2;background:rgba(0,255,178,.15);box-shadow:0 0 0 rgba(0,255,178,.6);animation:pulse 1.6s infinite;}
-.badge-offline{color:#ff4d6d;background:rgba(255,77,109,.15);animation:none;}
+.brand{font-weight:700;font-size:20px;display:flex;align-items:center;gap:12px;}
+.nav-menu a{color:var(--text);font-weight:500;margin-left:18px;display:inline-flex;align-items:center;gap:6px;transition:all .3s ease;}
+.nav-menu a:hover{color:var(--primary);transform:scale(1.05);text-shadow:0 0 8px var(--primary);}
+.navbar-badge{font-size:12px;padding:2px 10px;border-radius:999px;font-weight:700;letter-spacing:.5px;transition:all .3s ease;}
+.badge-online{color:#00ffb2;background:rgba(0,255,178,.15);animation:pulse 1.6s infinite;}
 .badge-maintenance{color:#ffc800;background:rgba(255,200,0,.15);animation:blink 1.2s infinite;}
 @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(0,255,178,.6);}70%{box-shadow:0 0 0 12px rgba(0,255,178,0);}100%{box-shadow:0 0 0 0 rgba(0,255,178,0);}}
 @keyframes blink{0%,100%{opacity:1;}50%{opacity:.4;}}
 
-/* ================= HERO CARD ================= */
-.hero-card{max-width:380px;margin:40px auto;background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.02));border-radius:22px;padding:26px;text-align:center;box-shadow:0 25px 70px rgba(0,0,0,.55);position:relative;overflow:hidden;}
+/* HERO CARD */
+.hero-card{max-width:380px;margin:40px auto;background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.02));border-radius:22px;padding:26px;text-align:center;box-shadow:0 25px 70px rgba(0,0,0,.55);position:relative;overflow:hidden;animation:cardPop 1s ease;}
 .hero-card::after{content:"";position:absolute;inset:0;background:radial-gradient(400px 120px at top, rgba(0,255,213,.15), transparent);pointer-events:none;}
+@keyframes cardPop{0%{transform:scale(0.9);opacity:0;}100%{transform:scale(1);opacity:1;}}
 .status-title{font-size:18px;margin-bottom:14px;}
-.status-badge{display:inline-flex;align-items:center;gap:10px;padding:10px 22px;border-radius:999px;font-weight:800;font-size:14px;letter-spacing:.6px;}
+.status-badge{display:inline-flex;align-items:center;gap:10px;padding:10px 22px;border-radius:999px;font-weight:800;font-size:14px;letter-spacing:.6px;animation:badgeGlow 2s infinite alternate;}
 .status-desc{margin-top:14px;font-size:14px;color:var(--muted);}
+@keyframes badgeGlow{0%{box-shadow:0 0 10px rgba(0,255,213,.5);}100%{box-shadow:0 0 22px rgba(0,255,213,.9);}}
 
-/* ================= PEJABAT SERVER ================= */
+/* PEJABAT SERVER */
 .section{max-width:960px;margin:40px auto;padding:0 20px;}
 .section h2{font-size:22px;margin-bottom:8px;}
 .section .lead{font-size:14px;color:var(--muted);margin-bottom:16px;}
 .staff-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:16px;}
 .staff-card{background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.12);border-radius:18px;padding:14px;text-align:center;font-weight:700;position:relative;transition:all .3s ease;box-shadow:0 12px 30px rgba(0,0,0,.3);cursor:default;}
+.staff-card:hover{transform:translateY(-8px) scale(1.02);box-shadow:0 20px 50px rgba(0,0,0,.5);}
 .staff-card .role{display:block;font-size:12px;color:var(--muted);margin-top:4px;}
-.staff-card:hover{transform:translateY(-6px);box-shadow:0 20px 40px rgba(0,0,0,.5);}
-.presidium{border-left:4px solid #ff3d00;}
-.vice{border-left:4px solid #ff6d00;}
-.ambassador{border-left:4px solid #ffbb00;}
-.tech{border-left:4px solid #00ffea;}
-.designer{border-left:4px solid #4f8cff;}
-.staff{border-left:4px solid #9aa3c7;}
+.presidium{border-left:4px solid #ff3d00;}.vice{border-left:4px solid #ff6d00;}.ambassador{border-left:4px solid #ffbb00;}.tech{border-left:4px solid #00ffea;}.designer{border-left:4px solid #4f8cff;}.staff{border-left:4px solid #9aa3c7;}
 
-/* ================= RULES ACCORDION ================= */
+/* RULES ACCORDION */
 .rule-category{margin-bottom:20px;border-radius:18px;overflow:hidden;box-shadow:0 10px 25px rgba(0,0,0,.35);background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.12);}
 .accordion{cursor:pointer;padding:16px 20px;width:100%;text-align:left;outline:none;font-size:16px;font-weight:700;color:var(--primary);background:rgba(0,0,0,.1);border:none;transition:background .3s ease;}
 .accordion:hover{background:rgba(0,0,0,.2);}
 .panel{padding:0 20px;background:rgba(0,0,0,.05);display:none;overflow:hidden;transition:max-height .3s ease;}
 .panel ul{margin:12px 0;padding-left:20px;}
 .panel li{margin-bottom:8px;line-height:1.5;}
+.panel li:hover{color:var(--primary);}
 .panel .note{color:#ffc800;font-weight:700;font-size:13px;margin-top:8px;}
 
-/* ================= FOOTER ================= */
-.site-footer{width:100%;padding:16px 0;background:linear-gradient(180deg, rgba(0,0,0,.8), rgba(0,0,0,.9));text-align:center;color:var(--muted);font-size:13px;font-weight:500;border-top:1px solid rgba(255,255,255,.08);box-shadow:0 -4px 12px rgba(0,0,0,.25);}
-.site-footer b{color:var(--primary);}
-@media (max-width:600px){.site-footer{font-size:12px;padding:12px 0;}}
-
-/* ================= PIXEL + ICON ================= */
-.pixel-decor,.tropis-icon{position:fixed;width:64px;height:64px;opacity:.15;z-index:0;}
-.pixel-decor{background-size:cover;image-rendering:pixelated;}
+/* ICON TROPSIS PS */
+.tropis-icon{position:fixed;width:64px;height:64px;object-fit:contain;opacity:.15;z-index:0;animation:floatIcon 6s ease-in-out infinite alternate;}
 .top-left{top:40px;left:20px;}
 .top-right{top:80px;right:20px;}
 .bottom-left{bottom:80px;left:40px;}
 .bottom-right{bottom:40px;right:40px;}
-.tropis-icon{object-fit:contain;animation:floatIcon 6s ease-in-out infinite alternate;}
 @keyframes floatIcon{0%{transform:translateY(0px) rotate(0deg);}50%{transform:translateY(-10px) rotate(10deg);}100%{transform:translateY(0px) rotate(0deg);}}
-@media(max-width:600px){.pixel-decor,.tropis-icon{display:none;}}
+
+/* ICON BOOKMARK */
+.bookmark-icon{position:fixed;width:48px;height:48px;object-fit:contain;opacity:.15;z-index:0;animation:floatBookmark 5s ease-in-out infinite alternate;}
+@keyframes floatBookmark{0%{transform:translateY(0px) rotate(0deg);}50%{transform:translateY(-10px) rotate(8deg);}100%{transform:translateY(0px) rotate(0deg);}}
+.bookmark-icon.top-left{top:20px;left:80px;}
+.bookmark-icon.top-right{top:60px;right:60px;}
+.bookmark-icon.bottom-left{bottom:60px;left:80px;}
+.bookmark-icon.bottom-right{bottom:20px;right:80px;}
+@media(max-width:600px){.bookmark-icon,.tropis-icon{display:none;}}
+
+/* FOOTER */
+.site-footer{width:100%;padding:16px 0;background:linear-gradient(180deg, rgba(0,0,0,.8), rgba(0,0,0,.9));text-align:center;color:var(--muted);font-size:13px;font-weight:500;border-top:1px solid rgba(255,255,255,.08);box-shadow:0 -4px 12px rgba(0,0,0,.25);}
+.site-footer b{color:var(--primary);}
 </style>
 </head>
 <body>
 
 <!-- LOADING SCREEN -->
 <div id="loadingScreen">
+  <h1>Selamat Datang di TROPIS PS</h1>
   <div class="loader-bar"><div class="progress"></div></div>
-  <p>Memuat TROPIS PS...</p>
+  <p>Memuat server...</p>
 </div>
 
-<!-- PIXEL DECOR & ICON -->
-<div class="pixel-decor top-left" style="background-image:var(--pixel-block)"></div>
-<div class="pixel-decor top-right" style="background-image:var(--pixel-block)"></div>
-<div class="pixel-decor bottom-left" style="background-image:var(--pixel-block)"></div>
-<div class="pixel-decor bottom-right" style="background-image:var(--pixel-block)"></div>
-<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon top-left">
-<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon top-right">
-<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon bottom-left">
-<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon bottom-right">
+<!-- ICONS -->
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon top-left" alt="TROPIS PS Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon top-right" alt="TROPIS PS Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon bottom-left" alt="TROPIS PS Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon bottom-right" alt="TROPIS PS Icon">
+
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon top-left" alt="Bookmark Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon top-right" alt="Bookmark Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon bottom-left" alt="Bookmark Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon bottom-right" alt="Bookmark Icon">
 
 <!-- NAVBAR -->
 <nav>
@@ -114,12 +116,11 @@ nav{width:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(6px);padding:12px 
       TROPIS PS
       <span id="navbarStatus" class="navbar-badge badge-online">🟢 ONLINE</span>
     </div>
-    <div>
-      <a href="#home">Beranda</a>
-      <a href="#tutorial">Tutorial</a>
-      <a href="#store">Toko Role</a>
-      <a href="#staff">Pejabat Server</a>
-      <a href="#rules">Rules</a>
+    <div class="nav-menu">
+      <a href="#home">🏠 Beranda</a>
+      <a href="#tutorial">📘 Tutorial</a>
+      <a href="#staff">👑 Pejabat Server</a>
+      <a href="#rules">📜 Rules</a>
     </div>
   </div>
 </nav>
@@ -193,48 +194,22 @@ nav{width:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(6px);padding:12px 
   Coded by <b>Xhams</b>
 </footer>
 
-<!-- ================= SCRIPTS ================= -->
 <script>
-  // LOADING BAR
-  const progress = document.querySelector("#loadingScreen .progress");
-  let width = 0;
-  const interval = setInterval(()=>{
-    width += Math.random()*10;
-    if(width>=100) width=100;
-    progress.style.width = width+"%";
-    if(width>=100){
-      clearInterval(interval);
-      const loader = document.getElementById("loadingScreen");
-      loader.style.transition="opacity 0.6s ease"; loader.style.opacity=0;
-      setTimeout(()=>{ loader.style.display="none";},600);
-    }
-  },200);
-
-  // ACCORDION
-  const accordions=document.querySelectorAll(".accordion");
-  accordions.forEach(acc=>{acc.addEventListener("click",function(){
-    this.classList.toggle("active");
-    const panel=this.nextElementSibling;
-    panel.style.display=(panel.style.display==="block")?"none":"block";
-  })});
-
-  // SERVER STATUS
-  const SERVER={online:true, maintenance:false, version:"Latest"};
-  function renderServerStatus(){
-    const el=document.getElementById("serverStatus");
-    const badge=document.getElementById("navbarStatus");
-    if(!el||!badge)return;
-    if(SERVER.maintenance){
-      el.innerHTML='<div class="status-badge badge-maintenance">🛠 MAINTENANCE</div><div class="status-desc">Server sedang maintenance.<br>Mohon tunggu update selanjutnya.</div>';
-      badge.textContent="🛠 MAINTENANCE"; badge.className="navbar-badge badge-maintenance";
-    } else{
-      el.innerHTML='<div class="status-badge '+(SERVER.online?'badge-online':'badge-offline')+'">'+(SERVER.online?'🟢 ONLINE':'🔴 OFFLINE')+'</div><div class="status-desc">Version: <b>'+SERVER.version+'</b></div>';
-      badge.textContent=SERVER.online?'🟢 ONLINE':'🔴 OFFLINE';
-      badge.className=SERVER.online?"navbar-badge badge-online":"navbar-badge badge-offline";
-    }
+// LOADING BAR
+const progress=document.querySelector("#loadingScreen .progress");
+let width=0;
+const interval=setInterval(()=>{
+  width+=Math.random()*10;
+  if(width>=100) width=100;
+  progress.style.width=width+"%";
+  if(width>=100){
+    clearInterval(interval);
+    const loader=document.getElementById("loadingScreen");
+    loader.style.transition="opacity 0.6s ease"; 
+    loader.style.opacity=0;
+    setTimeout(()=>{loader.style.display="none";},600);
   }
-  renderServerStatus();
-</script>
+},200);
 
-</body>
-</html>
+// ACCORDION
+document.querySelectorAll(".accordion
