--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TROPIS PS</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
-<link rel="icon" href="assets/tropis-icon.jpg" type="image/png">
 <style>
 :root {
   --bg:#070b14;
@@ -100,15 +99,14 @@ nav{width:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(6px);padding:12px 
 </div>
 
 <!-- ICONS -->
-<img src="assets/tropis-icon.jpg" class="tropis-icon top-left" alt="TROPIS PS Icon">
-<img src="assets/tropis-icon.jpg" class="tropis-icon top-right" alt="TROPIS PS Icon">
-<img src="assets/tropis-icon.jpg" class="tropis-icon bottom-left" alt="TROPIS PS Icon">
-<img src="assets/tropis-icon.jpg" class="tropis-icon bottom-right" alt="TROPIS PS Icon">
-
-<img src="assets/bookmark-icon.jpg" class="bookmark-icon top-left" alt="Bookmark Icon">
-<img src="assets/bookmark-icon.jpg" class="bookmark-icon top-right" alt="Bookmark Icon">
-<img src="assets/bookmark-icon.jpg" class="bookmark-icon bottom-left" alt="Bookmark Icon">
-<img src="assets/bookmark-icon.jpg" class="bookmark-icon bottom-right" alt="Bookmark Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon top-left" alt="TROPIS PS Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon top-right" alt="TROPIS PS Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon bottom-left" alt="TROPIS PS Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="tropis-icon bottom-right" alt="TROPIS PS Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon top-left" alt="Bookmark Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon top-right" alt="Bookmark Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon bottom-left" alt="Bookmark Icon">
+<img src="https://files.catbox.moe/435zuu.jpg" class="bookmark-icon bottom-right" alt="Bookmark Icon">
 
 <!-- NAVBAR -->
 <nav>
@@ -119,8 +117,8 @@ nav{width:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(6px);padding:12px 
     </div>
     <div class="nav-menu">
       <a href="#home">🏠 Beranda</a>
-      <a href="#tutorial">📘 Tutorial</a>
       <a href="#staff">👑 Pejabat Server</a>
+      <a href="#staff-rules">🛡️ Staff Rules</a>
       <a href="#rules">📜 Rules</a>
     </div>
   </div>
@@ -129,7 +127,7 @@ nav{width:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(6px);padding:12px 
 <!-- HERO CARD -->
 <div class="hero-card status-card">
   <div class="status-title">SERVER STATUS</div>
-  <div id="serverStatus"></div>
+  <div id="serverStatus">Online</div>
 </div>
 
 <!-- PEJABAT SERVER -->
@@ -154,46 +152,23 @@ nav{width:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(6px);padding:12px 
   </div>
 </section>
 
-<!-- RULES ACCORDION -->
-<section id="rules" class="section">
-  <h2>📜 Rules TROPIS PS</h2>
-  <p class="lead">Semua pemain wajib mematuhi aturan berikut untuk kenyamanan bersama</p>
+<!-- STAFF RULES -->
+<section id="staff-rules" class="section">
+  <h2>🛡️ Official Staff Rules</h2>
+  <p class="lead">Semua staff wajib mematuhi aturan berikut untuk menjaga server tetap aman & teratur</p>
 
   <div class="rule-category">
-    <button class="accordion">💬 Rules In Chat</button>
+    <button class="accordion">📜 Pasal 1: Mengelola Akun</button>
     <div class="panel">
       <ul>
-        <li>💬 Tidak berkata kasar (yang biasa-biasa aja DIUSAHAKAN JANGAN)</li>
-        <li>🙅 Tidak membully player lain, menindas, mengancam dan melecehkan</li>
-        <li>🚫 Dilarang menyebarkan P0rno🔞, Judol, Virtex</li>
-        <li>🤝 Bersikap sopan terhadap mods, owner, dan player-player lain</li>
+        <li>🔹 <b>Ayat 1: Jual Akun</b> Jika akun dijual tanpa sepengetahuan petinggi server, dianggap ❌ ilegal & tidak akan dibantu jika terkena scam.</li>
+        <li>🔹 <b>Ayat 2: Penggunaan Akun</b> Jangan abuse / troll orang untuk kesenangan pribadi. ❌ Merugikan orang lain = sanksi berlaku.</li>
+        <li>🔹 <b>Ayat 3: Peminjaman Akun</b> Dilarang meminjamkan akun ke player lain. ❌ Pelanggaran dapat mengakibatkan sanksi langsung.</li>
       </ul>
-      <p class="note">⚠️ APA BILA RULES INI DILANGGAR SANGSI NYA BISA LEBIH DARI INI!!!</p>
     </div>
   </div>
 
-  <div class="rule-category">
-    <button class="accordion">🎮 Rules In Game</button>
-    <div class="panel">
-      <ul>
-        <li>🌐 Tidak Melakukan Spam Pada <b>World-World Public</b></li>
-        <li>🚫 Dilarang <b>ngeban, ngemute, ngerusuh, ngetape</b> tanpa alasan jelas</li>
-        <li>🙅 Tidak melecehkan, menindas, menjelek-jelekan nama baik player</li>
-        <li>🛡 Dilarang <b>KERAS</b> menggunakan nick yang mengatas namakan mods atau player lain</li>
-        <li>⚙️ Dilarang <b>KERAS</b> menggunakan proxy, genta, script auto</li>
-        <li>💰 Dilarang <b>KERAS</b> jual/beli lock di : World public, sb, D. L. L</li>
-        <li>❌ Dilarang <b>KERAS</b> Mencuri, Mengakui hak orang lain, scamming, Tele, Berbohong</li>
-      </ul>
-      <p class="note">⚠️ RULES INI BERLAKU UNTUK SEMUA ORANG YANG MEMASUKI SERVER INI</p>
-    </div>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer class="site-footer">
-  &copy; 2026 TROPIS PS. All Rights Reserved.<br>
-  Coded by <b>Xhams</b>
-</footer>
+<!-- SELANJUTNYA AKAN MELIPUTI PASAL 2-5 STAFF RULES DAN RULES PLAYER -->
 
 <script>
 // LOADING BAR
@@ -213,14 +188,20 @@ const interval=setInterval(()=>{
 },200);
 
 // ACCORDION
-document.querySelectorAll(".accordion").forEach(button=>{
-  button.addEventListener("click",()=>{
-    button.classList.toggle("active");
-    const panel=button.nextElementSibling;
+document.querySelectorAll(".accordion").forEach(btn=>{
+  btn.addEventListener("click",()=>{
+    btn.classList.toggle("active");
+    const panel=btn.nextElementSibling;
     if(panel.style.display==="block"){panel.style.display="none";}
     else{panel.style.display="block";}
   });
 });
 </script>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  &copy; 2026 TROPIS PS. All Rights Reserved.<br>
+  Coded by <b>XHams</b>
+</footer>
 </body>
-  </html>
+</html>
